# Plabic

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
plabic/: __init__.py  ba_permutation.py  bcfw_cell.py  cluster.py  cyclic_utils.py  demazure.py  double_wiring.py  framed_2_disks.py  le_diagram.py  ownership_workarounds.py  plabic_diagram.py  plabic_diagram_faced.py  planar_diagram.py  separated_sets.py  shuffle.py  sign_pattern.py  sym_utils.py  symbol_alphabet.py  tnn_grassmannian.py  triangulation.py
tests/: test_ba_permutation.py  test_bcfw_cell.py  test_cluster.py  test_demazure.py  test_double_wiring.py  test_framed_2_disks.py  test_le.py  test_lyndon.py  test_plabic.py  test_planar_diagram.py  test_separated.py  test_shuffle.py  test_sign_pattern.py  test_symbol.py  test_tnn_grassmannian.py  test_triangulation.py
