[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plabic"
version = "0.3.2"
authors = [
  { name="Ammar Husain", email="ammar.s.husain@gmail.com" },
]
description = "A package related to the cluster algebra and geometry related to plabic graphs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research"
]

[project.urls]
"Homepage" = "https://github.com/Cobord/Plabic"
"Bug Tracker" = "https://github.com/Cobord/Plabic/issues"
